# project1_Eroshkin_Kirill_M25-555

./: .gitignore  .gitignore.save  README.md  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
